syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";

option go_package = "user/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply){
		option (google.api.http) = {
			post : "/user"
			body : "*"
		  };
	};
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply);
	rpc ListUser (ListUserRequest) returns (ListUserReply);
}

message CreateUserRequest {
	string nickName = 1;
	string password = 2;
	string mobile = 3;
}
message CreateUserReply {
	int64 id = 1;
}

message UpdateUserRequest {
	int64 id = 1;
  	string password = 2;
  	string mobile = 3;
  	string nickName = 4;
  	int64 birthday = 5;
  	string gender = 6;
  	int32 role = 7;
}
message UpdateUserReply {}

message DeleteUserRequest {}
message DeleteUserReply {}

message GetUserRequest {
	int64 id = 1;
}
message GetUserReply {
	int64 id = 1;
  	string password = 2;
  	string mobile = 3;
  	string nickName = 4;
  	int64 birthday = 5;
  	string gender = 6;
  	int32 role = 7;
}

message ListUserRequest {}
message ListUserReply {}